--- a/PizzaLoveApp.WebUI/Views/Account/Login.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-4 mb-3">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" name="ReturnUrl" value="@Model.ReturnUrl"/>
+            <input type="hidden" name="ReturnUrl" value="@Model.ReturnUrl" />
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group mt-3">
                 <input type="submit" value="Giriş Yap" class="btn btn-primary" />
-                <button class="btn btn-secondary" asp-controller="Account" asp-action="ForgotPassword">Şifremi Unuttum</button>
+                <a class="btn btn-secondary" asp-action="ForgotPassword">Şifremi Unuttum</a>
             </div>
         </form>
     </div>
