--- a/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "CreateProduct";
     var counter = 0;
+    var sizeCounter = 0;
 }
 
 @section Scripts{
@@ -78,13 +79,13 @@
                     <span asp-validation-for="PointPrize" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group-row">
+            @*<div class="form-group-row">
                 <label asp-for="Size" class="col-md-2 col-form-label">Boyutu</label>
                 <div class="col-md-10">
                     <input asp-for="Size" value="@Model.Size" class="form-control" />
                     <span asp-validation-for="Size" class="text-danger"></span>
                 </div>
-            </div>
+            </div>*@
             <div class="form-group-row mt-2">
                 <div class="col-md-10">
                     <button type="submit" class="btn btn-primary">Ürünü Ekle</button>
@@ -111,6 +112,28 @@
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" name="categoryIds" value="@item.Id" id="category@(item.Id)" @isChecked>
                     <label class="form-check-label" for="category@(item.Id)">
+                        @item.Name
+                    </label>
+                </div>
+            }
+            @*TODO ürün size konumu sayfada değiştirilecek *@
+            @foreach (var item in (List<Size>) ViewBag.Size)
+            {
+                var isChecked = "";
+                if (Model.SelectedSize.Any(i => i.Id == item.Id ))
+                {
+                    isChecked = "checked";
+                    <input type="hidden" name="SelectedSize[@sizeCounter].Id" value="@item.Id" />   
+                    <input type="hidden" name="SelectedSize[@sizeCounter].Name" value="@item.Name" />
+                    sizeCounter++;
+                }
+                else
+                {
+                    isChecked = "";
+                }
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" name="sizeIds" value="@item.Id" id="size@(item.Id)" @isChecked/>
+                    <label class="form-check-label" for="size@(item.Id)">
                         @item.Name
                     </label>
                 </div>
