--- a/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "EditProduct";
     var counter = 0;
+    var sizeCounter = 0;
 }
 
 @section Scripts{
@@ -99,6 +100,28 @@
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" name="categoryIds" value="@item.Id" id="category@(item.Id)" @isChecked>
                     <label class="form-check-label" for="category@(item.Id)">
+                        @item.Name
+                    </label>
+                </div>
+            }
+            @*TODO ürün size konumu sayfada değiştirilecek *@
+            @foreach (var item in (List<Size>)ViewBag.Size)
+            {
+                var isChecked = "";
+                if (Model.SelectedSize.Any(i => i.Id == item.Id))
+                {
+                    isChecked = "checked";
+                    <input type="hidden" name="SelectedSize[@sizeCounter].Id" value="@item.Id" />
+                    <input type="hidden" name="SelectedSize[@sizeCounter].Name" value="@item.Name" />
+                    sizeCounter++;
+                }
+                else
+                {
+                    isChecked = "";
+                }
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" name="sizeIds" value="@item.Id" id="size@(item.Id)" @isChecked />
+                    <label class="form-check-label" for="size@(item.Id)">
                         @item.Name
                     </label>
                 </div>
